hphp/hack/test/typecheck/list_destructuring_akany.php.exp
File "list_destructuring_akany.php", line 6, characters 3-13:
  nothing
File "list_destructuring_akany.php", line 7, characters 3-13:
  nothing
File "list_destructuring_akany.php", line 5, characters 3-19:
Invalid assignment (Typing[4110])
File "list_destructuring_akany.php", line 5, characters 3-14:
Expected list([unresolved], [unresolved]) resulting from a list destructuring assignment of length 2
File "list_destructuring_akany.php", line 4, characters 16-20:
But got varray_or_darray<_>
